# cartoon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
model/cartoon0510/: label.txt
model/cartoon0631/: cartoon.txt  label.txt
